# four-angry-agents

./: .gitignore  README.md  discussion_log_20250820_164220.json  main.py  pyproject.toml  requirements.txt  run_experiment.py
analysis/: __init__.py  metrics.py  visualize.py
config/: settings.py  traits.py
core/: __init__.py  agent.py  models.py  team.py
experiments/: __init__.py  base_experiment.py  s0_baseline.py  s1_fixed.py  s2_trait_shift.py  s3_removal.py  s4_disruptor.py
pydantic-schema/: agent_schema.py
