[project]
name = "four-angry-agents"
version = "0.1.0"
description = "what happens when you make 4 agents discuss a problem and take a decision?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "instructor>=1.10.0",
    "openai>=1.100.2",
    "requests>=2.32.5",
]
